New-Portfolio-website

--- a/index.html
+++ b/index.html
@@ -77,27 +77,24 @@
             <div class="services-box">
                 <i class='bx bxl-codepen'></i>
                 <h3>Data Science</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus, voluptatibus. Quas veritatis
-                    architecto deserunt magnam. Vero nulla nihil veritatis quaerat autem exercitationem dolor earum
-                    dolore, sequi culpa ipsa nesciunt ad.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam iure consequuntur architecto
+                    repudiandae in adipisci veniam, deserunt amet nobis corporis!</p>
                 <a href="#" class="btn">Read More</a>
             </div>
 
             <div class="services-box">
                 <i class='bx bx-doughnut-chart'></i>
                 <h3>Machine Learning</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus, voluptatibus. Quas veritatis
-                    architecto deserunt magnam. Vero nulla nihil veritatis quaerat autem exercitationem dolor earum
-                    dolore, sequi culpa ipsa nesciunt ad.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam doloribus corporis reiciendis
+                    aliquid quam odit veniam aspernatur nam inventore dolorum.</p>
                 <a href="#" class="btn">Read More</a>
             </div>
 
             <div class="services-box">
                 <i class='bx bx-network-chart'></i>
                 <h3>AI Intelligence</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus, voluptatibus. Quas veritatis
-                    architecto deserunt magnam. Vero nulla nihil veritatis quaerat autem exercitationem dolor earum
-                    dolore, sequi culpa ipsa nesciunt ad.</p>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iste hic voluptas consectetur possimus
+                    beatae tenetur itaque ab odit, neque enim.</p>
                 <a href="#" class="btn">Read More</a>
             </div>
         </div>
@@ -167,7 +164,7 @@
     <!-- contact section design  -->
     <section class="contact" id="contact">
         <h2 class="heading">Contact <span>Me!</span></h2>
-        
+
         <form action="#">
             <div class="input-box">
                 <input type="text" placeholder="Full Name">
@@ -188,7 +185,7 @@
             <p>Copyright &copy; 2023 by Prohit|All Rights Reserved.</p>
         </div>
         <div class="footer-iconTop">
-            <a href="#home"><i class='bx bx-up-arrow-alt' ></i></a>
+            <a href="#home"><i class='bx bx-up-arrow-alt'></i></a>
         </div>
     </footer>
 
