--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div class="home-content">
             <h3>Hello, It's Me</h3>
             <h1>Prohit Bagde</h1>
-            <h3>And I'm a <span>scientist And loves robotics</span></h3>
+            <h3>And I'm a <span class="multiple-text" id="multiple-text"></span></h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
                 Nihil voluptates repudiandae blanditiis
                 accusantium ratione cum, nam mollitia.</p>
@@ -189,7 +189,18 @@
         </div>
     </footer>
 
+
+    <!-- Scoll revral -->
+    <script src="https://unpkg.com/scrollreveal"></script>
+
+    <!-- Typed Js  -->
+    <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
+
+    <!-- Custom js  -->
     <script src="script.js"></script>
+    
 </body>
+
+
 
 </html>
