--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         </div>
 
         <div class="home-img">
-            <img src="images/home.png" alt="">
+            <img loading="lazy" src="images/home.png" alt="">
         </div>
     </section>
 
@@ -55,7 +55,7 @@
 
     <section class="about" id="about">
         <div class="about-img">
-            <img src="images/about.png" alt="">
+            <img loading="lazy" src="images/about.png" alt="">
         </div>
 
         <div class="about-content">
@@ -74,10 +74,11 @@
     <section class="services" id="services">
         <h2 class="heading">Our <span>Service</span></h2>
         <div class="services-container">
+            
             <div class="services-box">
                 <i class='bx bxl-codepen'></i>
                 <h3>Data Science</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam iure consequuntur architecto
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.  consequuntur architecto
                     repudiandae in adipisci veniam, deserunt amet nobis corporis!</p>
                 <a href="#" class="btn">Read More</a>
             </div>
@@ -106,7 +107,7 @@
         <div class="portfolio-container">
 
             <div class="portfolio-box">
-                <img src="images/portfolio1.jpg" alt="">
+                <img loading="lazy" src="images/portfolio1.jpg" alt="">
                 <div class="protfolio-layer">
                     <h4>Web Designing</h4>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Non, accusantium.</p>
@@ -115,7 +116,7 @@
             </div>
 
             <div class="portfolio-box">
-                <img src="images/portfolio3.jpg" alt="">
+                <img loading="lazy" src="images/portfolio3.jpg" alt="">
                 <div class="protfolio-layer">
                     <h4>Web Designing</h4>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta, nemo!</p>
@@ -124,7 +125,7 @@
             </div>
 
             <div class="portfolio-box">
-                <img src="images/portfolio3.jpg" alt="">
+                <img loading="lazy" src="images/portfolio3.jpg" alt="">
                 <div class="protfolio-layer">
                     <h4>Web Designing</h4>
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Incidunt, itaque.</p>
@@ -133,7 +134,7 @@
             </div>
 
             <div class="portfolio-box">
-                <img src="images/portfolio4.jpg" alt="">
+                <img loading="lazy" src="images/portfolio4.jpg" alt="">
                 <div class="protfolio-layer">
                     <h4>Web Designing</h4>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequatur, iusto!</p>
@@ -142,7 +143,7 @@
             </div>
 
             <div class="portfolio-box">
-                <img src="images/portfolio6.jpg" alt="">
+                <img loading="lazy" src="images/portfolio6.jpg" alt="">
                 <div class="protfolio-layer">
                     <h4>Web Designing</h4>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam, corrupti.</p>
@@ -151,7 +152,7 @@
             </div>
 
             <div class="portfolio-box">
-                <img src="images/portfolio6.jpg" alt="">
+                <img loading="lazy" src="images/portfolio6.jpg" alt="">
                 <div class="protfolio-layer">
                     <h4>Web Designing</h4>
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Natus, ab!</p>
