--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
             </div>
 
             <div class="portfolio-box">
-                <img loading="lazy" src="images/portfolio3.jpg" alt="">
+                <img loading="lazy" src="images/portfolio7.jpeg" alt="">
                 <div class="protfolio-layer">
                     <h4>Web Designing</h4>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta, nemo!</p>
@@ -143,7 +143,7 @@
             </div>
 
             <div class="portfolio-box">
-                <img loading="lazy" src="images/portfolio6.jpg" alt="">
+                <img loading="lazy" src="images/portfolio8.jpeg" alt="">
                 <div class="protfolio-layer">
                     <h4>Web Designing</h4>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam, corrupti.</p>
