--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
         <div class="portfolio-container">
 
             <div class="portfolio-box">
-                <img loading="lazy" src="images/portfolio1.jpg" alt="">
+                <img loading="lazy" src="images/portfolio1.png" alt="">
                 <div class="protfolio-layer">
                     <h4>Web Designing</h4>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Non, accusantium.</p>
@@ -116,7 +116,7 @@
             </div>
 
             <div class="portfolio-box">
-                <img loading="lazy" src="images/portfolio7.jpeg" alt="">
+                <img loading="lazy" src="images/portfolio7.png" alt="">
                 <div class="protfolio-layer">
                     <h4>Web Designing</h4>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta, nemo!</p>
@@ -125,7 +125,7 @@
             </div>
 
             <div class="portfolio-box">
-                <img loading="lazy" src="images/portfolio3.jpg" alt="">
+                <img loading="lazy" src="images/portfolio3.png" alt="">
                 <div class="protfolio-layer">
                     <h4>Web Designing</h4>
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Incidunt, itaque.</p>
@@ -134,7 +134,7 @@
             </div>
 
             <div class="portfolio-box">
-                <img loading="lazy" src="images/portfolio4.jpg" alt="">
+                <img loading="lazy" src="images/portfolio4.png" alt="">
                 <div class="protfolio-layer">
                     <h4>Web Designing</h4>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequatur, iusto!</p>
@@ -143,7 +143,7 @@
             </div>
 
             <div class="portfolio-box">
-                <img loading="lazy" src="images/portfolio8.jpeg" alt="">
+                <img loading="lazy" src="images/portfolio8.png" alt="">
                 <div class="protfolio-layer">
                     <h4>Web Designing</h4>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam, corrupti.</p>
@@ -152,7 +152,7 @@
             </div>
 
             <div class="portfolio-box">
-                <img loading="lazy" src="images/portfolio6.jpg" alt="">
+                <img loading="lazy" src="images/portfolio2.png" alt="">
                 <div class="protfolio-layer">
                     <h4>Web Designing</h4>
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Natus, ab!</p>
