--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
     <!-- portfolio section design  -->
     <section class="portfolio" id="portfolio">
-        <h2 class="heading">Latest <span>Projet</span></h2>
+        <h2 class="heading">Latest <span>Projects</span></h2>
         <div class="portfolio-container">
 
             <div class="portfolio-box">
@@ -192,7 +192,7 @@
 
 
     <!-- Scoll revral -->
-    <script src="https://unpkg.com/scrollreveal"></script>
+    <!-- <script src="https://unpkg.com/scrollreveal"></script> -->
 
     <!-- Typed Js  -->
     <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
