--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <section class="home" id="home">
         <div class="home-content">
             <h3>Hello, It's Me</h3>
-            <h1>Prohit Bagde</h1>
+            <h1>Mahaksh  bhandarkar</h1>
             <h3>And I'm a <span class="multiple-text" id="multiple-text"></span></h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
                 Nihil voluptates repudiandae blanditiis
